# novaic-app

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CONFIG_MIGRATION_REPORT.md  CONFIG_MIGRATION_SUMMARY.md  FRONTEND_ARCHITECTURE.md  Launch-NovAIC.command  README.md  VNC_SCRCPY_WS_CONNECTIONS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: ARCHITECTURE_OVERVIEW.md  DB_DRIVEN_ARCHITECTURE_CHECK.md  DB_DRIVEN_MIGRATION_PLAN.md  IOS_VNC_WEBSOCKET_ERROR_ANALYSIS.md  VNC_WEBSOCKET_TO_UDP_TRACE.md
patches/: @novnc+novnc+1.5.0.patch
public/: test-vnc.html  vnc.html
scripts/: build-and-install-ios.sh  build-dmg.sh  build_desktop_evidence_bundle.sh  copy-sdk-to-data-dir.sh  deploy-frontend.sh  failure_path_replay_round008.sh  failure_path_replay_round009.sh  migrate-avd-to-data-dir.sh  patch-ios-xcode.sh  run-ios-xcode-script.sh  start-backends.sh  test-stun.py  trim-emulator-qt.sh  validate_fresh_profile.sh  verify_desktop_evidence_manifest.sh
scripts/root-migrated/: check-desktop-session.sh  check-rust-process.sh
scripts/split/: Launch-NovAIC-Split.command  build_split_only.sh  launch_split_only.sh  stop_split_only.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  DMG_BUILD_FIX.md  setup-dmg-support.sh  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: main.json  remote-frontend.json
src-tauri/icons/: README.md  icon.icns  regenerate_app_icon.py
src-tauri/p2p/: Cargo.toml
src-tauri/p2p/src/: client.rs  config.rs  crypto.rs  device_id.rs  hole_punch.rs  lib.rs  local_discovery.rs  relay.rs  rendezvous.rs  server.rs  tunnel.rs  types.rs  vnc_endpoint.rs
src-tauri/p2p/src/discovery/: gateway.rs  mdns.rs  mod.rs
src-tauri/p2p/src/registry/: gateway.rs  mdns.rs  mod.rs
src-tauri/permissions/: allow-app-commands.toml
src-tauri/resources/config/: services.json
src-tauri/resources/novaic-mcp-vmuse/: README.md  pyproject.toml  run_server.sh
src-tauri/resources/novaic-mcp-vmuse/src/novaic_mcp_vmuse/: cli.py  http_server.py  main.py  virtio_proxy.py
src-tauri/resources/novaic-mcp-vmuse/src/novaic_mcp_vmuse/tools/: browser.py  context.py  files.py  shell.py  windows.py
src-tauri/resources/qemu/: qemu-img
src-tauri/resources/qemu/libs/: libfdt.1.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgmodule-2.0.0.dylib  libgmp.10.dylib  libgnutls.30.dylib  libgobject-2.0.0.dylib  libhogweed.6.dylib  libidn2.0.dylib  libintl.8.dylib  libjpeg.8.dylib  liblzo2.2.dylib  libncursesw.6.dylib  libnettle.8.dylib  libp11-kit.0.dylib  libpcre2-8.0.dylib  libpixman-1.0.dylib  libpng16.16.dylib  libslirp.0.dylib  libsnappy.1.dylib  libssh.4.dylib  libtasn1.6.dylib  libunistring.5.dylib  libusb-1.0.0.dylib  libvdeplug.3.dylib  libzstd.1.dylib
src-tauri/resources/qemu/share/: trace-events-all
src-tauri/resources/qemu/share/firmware/: 50-edk2-i386-secure.json  50-edk2-x86_64-secure.json  60-edk2-aarch64.json  60-edk2-arm.json  60-edk2-i386.json  60-edk2-loongarch64.json  60-edk2-riscv64.json  60-edk2-x86_64.json
src-tauri/src/: app_config.rs  cloud_connection.rs  config.rs  error.rs  gateway_client.rs  http_client.rs  lib.rs  main.rs  mobile.rs  p2p_commands.rs  setup.rs  split_runtime.rs  vnc_proxy.rs
src-tauri/src/commands/: agent_commands.rs  app_instance.rs  auth.rs  config.rs  config_commands.rs  file.rs  file_commands.rs  gateway.rs  mod.rs  secure_storage.rs  vnc_bridge.rs  vnc_stream.rs  vnc_urls.rs
src-tauri/src/core/: bootstrap.rs  config.rs  error.rs  gateway_client.rs  mod.rs  sse_stream.rs
src-tauri/src/files/: mod.rs
src-tauri/src/platform/: device_info.rs  file_ops.rs  mod.rs  storage.rs
src-tauri/src/state/: mod.rs  vmcontrol.rs
src-tauri/src/vm/: deploy.rs  mod.rs  setup.rs
src-tauri/vmcontrol/: API.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  GUEST_AGENT_README.md  IMPLEMENTATION_SUMMARY.md  PHASE_3.3_SUMMARY.md  PHASE_3_2_COMPLETION_REPORT.md  PHASE_3_2_SUMMARY.md  PHASE_4_VNC_PROXY_DESIGN.md  README.md  README_VNC.md  VNC_FRONTEND_INTEGRATION.md  VNC_WEBSOCKET_PROXY.md  test-api.sh  test-guest-agent.sh  test_vnc_websocket.sh
src-tauri/vmcontrol/examples/: guest_agent_demo.rs  qmp_demo.rs
src-tauri/vmcontrol/src/: cloud_bridge.rs  config.rs  error.rs  lib.rs  main.rs  vnc_endpoint.rs
src-tauri/vmcontrol/src/android/: avd.rs  emulator.rs  mod.rs  sdk_init.rs
src-tauri/vmcontrol/src/api/: mod.rs  server.rs  types.rs
src-tauri/vmcontrol/src/api/routes/: android.rs  browser.rs  guest.rs  health.rs  input.rs  mobile.rs  mod.rs  scrcpy.rs  screen.rs  setup.rs  users.rs  vm.rs  vm_prep.rs  vmuse.rs  vnc.rs
src-tauri/vmcontrol/src/qemu/: guest_agent.rs  mod.rs  process.rs  qmp.rs
src-tauri/vmcontrol/src/scrcpy/: mod.rs
src-tauri/vmcontrol/src/vnc/: mod.rs
src/application/: agentService.ts  chatScrollRegistry.ts  converters.ts  index.ts  layoutService.ts  logFilterStore.ts  logInputCacheStore.ts  logPaginationStore.ts  logService.ts  messagePaginationStore.ts  messageService.ts  modelService.ts  store.ts  syncService.ts
src/components/: TauriRequiredFallback.tsx
src/config/: index.ts
src/constants/: scroll.ts
src/db/: agentConfigRepo.ts  agentConfigSubscription.ts  agentRepo.ts  agentSubscription.ts  deviceRepo.ts  deviceSubscription.ts  fileRepo.ts  index.ts  logRepo.ts  logSubscription.ts  messageRepo.ts  messageSubscription.ts  prefsRepo.ts
src/gateway/: auth.ts  client.ts  sse.ts
src/hooks/: useAgentBinding.ts  useAgentConfigFromDB.ts  useAgentDevice.ts  useAgentsFromDB.ts  useAutoScroll.ts  useBreakpoint.ts  useDeviceStatus.ts  useDeviceStatusPolling.ts  useDeviceVncTarget.ts  useDevicesFromDB.ts  useFocusTrap.ts  useIsMobile.ts  useLogsFromDB.ts  useMediaQuery.ts  useMessagesFromDB.ts  useScrollPagination.ts  useVirtualList.ts  useVm.ts  useVnc.ts
src/services/: api.ts  auth.ts  index.ts  scrcpyStream.ts  secureStorage.ts  setup.ts  trs.ts  vm.ts  vncBridge.ts  vncStream.ts  vncTransport.ts
src/store/: index.ts
src/stores/: deviceStatusStore.ts
src/styles/: index.css
src/types/: index.ts  novnc-rfb.d.ts  novnc.d.ts  vnc.ts  (+1 more)
(+80 files in other folders)
