[package]
name = "novaic"
version = "0.1.0"
description = "NovAIC - Claude Code capabilities with GUI visualization"
authors = ["NovAIC Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
# Use rustls instead of native-tls to avoid macOS sandbox issues
# blocking feature needed for sync VM stop before Gateway shutdown
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
# VmControl 内嵌库（HTTP Server + VM/Android 管理）
vmcontrol = { path = "vmcontrol" }
# rustls 0.23 (used by tokio-tungstenite 0.24) requires an explicit crypto provider.
# "ring" gives us a stable, well-tested backend; install_default() is called in main().
rustls = { version = "0.23", features = ["ring"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }
# Future: Unix socket support (currently using TCP)
# hyper = { version = "1.4", features = ["client", "http1"] }
# hyperlocal = "0.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
