[package]
name = "novaic"
version = "0.1.0"

[lib]
name = "app"
crate-type = ["staticlib", "rlib"]
description = "NovAIC - Claude Code capabilities with GUI visualization"
authors = ["NovAIC Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri: wry 全平台；tray-icon/devtools 仅桌面
tauri = { version = "2", default-features = false, features = [ "wry"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = { version = "2", optional = true }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
# rustls-tls for macOS sandbox; blocking only for desktop VM shutdown
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1.3"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
rustls = { version = "0.23", features = ["ring"] }

# 桌面专属（Android/iOS 构建时自动排除）
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
vmcontrol = { path = "vmcontrol" }
axum = { version = "0.7", features = ["ws"] }
quinn = { version = "0.11", features = ["rustls"] }
p2p = { path = "p2p" }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "blocking"] }
# 桌面端用加密文件，避免 Keychain 弹窗吓到用户
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(target_os = "ios")'.dependencies]
# 仅 iOS 用 Keychain（iOS 通常不弹密码窗）
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "android")'.dependencies]
aes-gcm = "0.10"
rand = "0.8"

# 移动端：VncProxy（P2P 连接远端 VNC/Scrcpy）需要 p2p/axum/quinn
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
axum = { version = "0.7", features = ["ws"] }
quinn = { version = "0.11", features = ["rustls"] }
p2p = { path = "p2p" }

[features]
default = ["custom-protocol", "desktop"]
custom-protocol = ["tauri/custom-protocol"]
# 桌面专属：托盘、devtools、进程管理
desktop = ["tauri/tray-icon", "tauri/devtools", "tauri-plugin-process"]
mobile = []

[dev-dependencies]
mockito = "1.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
