[package]
name = "vmcontrol"
version = "0.1.0"
edition = "2021"

[lib]
name = "vmcontrol"
path = "src/lib.rs"

[[bin]]
name = "vmcontrol"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"
tempfile = "3"
image = "0.25"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
zip = "2"
dirs = "5.0"
once_cell = "1.21.3"
futures = "0.3"
# Cloud Bridge: outgoing WebSocket to Gateway
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }

# P2P 层：mDNS 广播（LAN 发现）
p2p = { path = "../p2p" }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
